fixed up collection display
Items weren't always 100% width, wound up looking really messed up

--- a/sass/breakpoints/_base.scss
+++ b/sass/breakpoints/_base.scss
@@ -136,6 +136,7 @@ th {
 
 .two-col>div {
   display: inline-block;
+  width: 100%;
 }
 /* columns for mobile */
 .mfull {
